crates/codira_codegen/src/snapshots/codira_codegen__test__intrinsic_is_not_a_dispatch_table_dependency.snap
---
source: crates/codira_codegen/src/test.rs
assertion_line: 1246
expression: "\n    extern \"codira-intrinsic\" {\n        func load_u32(addr: usize) -> u32;\n        func store_u32(addr: usize, value: u32);\n    }\n    extern \"C\" {\n        func real_external_symbol(x: i64) -> i64;\n    }\n    public func copy_and_call(src: usize, dst: usize, n: i64) -> i64 {\n        store_u32(dst, load_u32(src));\n        real_external_symbol(n)\n    }\n    "
snapshot_kind: text
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

%DispatchTable = type { ptr }

@dispatchTable = external global %DispatchTable
@global_type_lookup_table = external global [2 x ptr]

define i64 @copy_and_call(i64 %0, i64 %1, i64 %2) {
body:
  %n = alloca i64, align 8
  store i64 %2, ptr %n, align 4
  %dst = alloca i64, align 8
  store i64 %1, ptr %dst, align 4
  %src = alloca i64, align 8
  store i64 %0, ptr %src, align 4
  %dst1 = load i64, ptr %dst, align 4
  %src2 = load i64, ptr %src, align 4
  %intrinsic.addr = inttoptr i64 %src2 to ptr
  %intrinsic.load = load i32, ptr %intrinsic.addr, align 4
  %intrinsic.addr3 = inttoptr i64 %dst1 to ptr
  store i32 %intrinsic.load, ptr %intrinsic.addr3, align 4
  %n4 = load i64, ptr %n, align 4
  %real_external_symbol_ptr = load ptr, ptr @dispatchTable, align 8
  %real_external_symbol = call i64 %real_external_symbol_ptr(i64 %n4)
  ret i64 %real_external_symbol
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { ptr }

@dispatchTable = global %DispatchTable zeroinitializer
@global_type_lookup_table = global [2 x ptr] zeroinitializer
