crates/codira_codegen/src/snapshots/codira_codegen__test__issue_128.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    // resources/script.code\n    extern func thing(n: i32);\n    extern func print(n: i32) -> i32;\n\n    public func main() {\n        // 1st\n        print(1);\n        thing(5);\n\n        // 2nd\n        print(2);\n        thing(78);\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

%DispatchTable = type { ptr, ptr }

@dispatchTable = external local_unnamed_addr global %DispatchTable

define void @main() local_unnamed_addr {
body:
  %print_ptr = load ptr, ptr @dispatchTable, align 8
  %print = tail call i32 %print_ptr(i32 1)
  %thing_ptr = load ptr, ptr getelementptr inbounds nuw (i8, ptr @dispatchTable, i64 8), align 8
  tail call void %thing_ptr(i32 5)
  %print_ptr1 = load ptr, ptr @dispatchTable, align 8
  %print2 = tail call i32 %print_ptr1(i32 2)
  %thing_ptr3 = load ptr, ptr getelementptr inbounds nuw (i8, ptr @dispatchTable, i64 8), align 8
  tail call void %thing_ptr3(i32 78)
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { ptr, ptr }

@dispatchTable = global %DispatchTable zeroinitializer
@global_type_lookup_table = global [1 x ptr] zeroinitializer
