crates/codira_codegen/src/snapshots/codira_codegen__test__issue_133.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    func do_the_things(n: i32) -> i32 {\n        n + 7\n    }\n    \n    public func main() {\n        do_the_things(3);\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @do_the_things(i32 %0) local_unnamed_addr #0 {
body:
  %add = add i32 %0, 7
  ret i32 %add
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define void @main() local_unnamed_addr #0 {
body:
  ret void
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"
