crates/codira_codegen/src/snapshots/codira_codegen__test__issue_228_never_if.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func fact(n: usize) -> usize {\n   \t    if n == 0 {return 1} else {return n * (n-1)}\n   \t    return 2;\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @fact(i64 %0) local_unnamed_addr #0 {
body:
  %eq = icmp eq i64 %0, 0
  %sub = add i64 %0, -1
  %mul = mul i64 %sub, %0
  %common.ret.op = select i1 %eq, i64 1, i64 %mul
  ret i64 %common.ret.op
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
